--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,218 @@
+:root {
+    --header-height: 3rem;
+    --nav-width: 68px;
+    --first-color: #028784;
+    --first-color-light: #b2d8d8;
+    --white-color: #f7f6fb00;
+    --body-font: 'Karla', sans-serif;
+    --normal-font-size: 1rem;
+    --z-fixed: 100
+}
+
+*,
+::before,
+::after {
+    box-sizing: border-box
+}
+
+body {
+    position: relative;
+    margin: var(--header-height) 0 0 0;
+    padding: 0 0rem;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    transition: .5s;
+    overflow-x: hidden;
+}
+
+a {
+    text-decoration: none
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: "Spectral", serif;
+}
+
+p {
+    font-family: "Karla", sans-serif;
+}
+
+.header {
+    width: 100%;
+    height: var(--header-height);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    z-index: var(--z-fixed);
+    transition: .5s
+}
+
+.header_toggle {
+    color: var(--first-color);
+    font-size: 1.5rem;
+    cursor: pointer
+}
+
+.header_img {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    overflow: hidden
+}
+
+.header_img img {
+    width: 30px
+}
+
+.l-navbar {
+    position: fixed;
+    top: 0;
+    left: -30%;
+    width: var(--nav-width);
+    height: 100vh;
+    background-color: var(--first-color);
+    padding: .5rem 1rem 0 0;
+    transition: .5s;
+    z-index: var(--z-fixed);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.nav {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden
+}
+
+.nav_logo,
+.nav_link {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    align-items: center;
+    column-gap: 1rem;
+    padding: .5rem 0 .5rem 1.5rem
+}
+
+.img_logo {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    align-items: center;
+    column-gap: 1rem;
+    /* T L B R  */
+    padding: .5rem 0 1.5rem 1.25rem;
+}
+
+.nav_logo {
+    margin-bottom: 2rem
+}
+
+.nav_logo-icon {
+    font-size: 1.25rem;
+    color: #fff;
+}
+
+.nav_logo-name {
+    color: #fff;
+    font-weight: 700
+}
+
+.nav_link {
+    position: relative;
+    color: var(--first-color-light);
+    margin-bottom: 1.5rem;
+    transition: .3s
+}
+
+.nav_link:hover {
+    color: #fff;
+}
+
+.nav_icon {
+    font-size: 1.25rem
+}
+
+.show {
+    left: 0
+}
+
+.body-pd {
+    padding-left: calc(var(--nav-width) + 0rem)
+}
+
+.header-pd {
+    padding-left: calc(var(--nav-width) + 1.25rem)
+}
+
+.active {
+    color: #fff;
+}
+
+.nav_list .active::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 2px;
+    height: 32px;
+    background-color: #fff;
+}
+
+.height-100 {
+    height: 100vh
+}
+
+.width-100 {
+    width: 100vw;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        margin: calc(var(--header-height) + 0rem) 0 0 0;
+        padding-left: calc(var(--nav-width) + 0rem)
+    }
+
+    .header {
+        height: calc(var(--header-height) + 1rem);
+        padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
+    }
+
+    .header_img {
+        width: 30px;
+        height: 30px
+    }
+
+    .header_img img {
+        width: 30px
+    }
+
+    .l-navbar {
+        left: 0;
+        padding: 1rem 1rem 0 0
+    }
+
+    .show {
+        width: calc(var(--nav-width) + 150px)
+    }
+
+    .body-pd {
+        padding-left: calc(var(--nav-width) + 150px)
+    }
+
+    .header-pd {
+        padding-left: calc(var(--nav-width) + 170px)
+    }
+}
+
 /* ------------smooth scrolling---------------------*/
 html {
     scroll-behavior: smooth;
@@ -28,6 +243,21 @@ html {
     line-height: 2.2em;
     color: rgba(255, 255, 255, 0.767);
     ;
+}
+
+.header .col:nth-child(2) {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+.header .col:nth-child(2) i {
+    font-size: 30px;
+    position: absolute;
+    margin-left: -50%;
+    color: rgba(255, 255, 255, 0.767);
 }
 
 /* ------------bootstrap carousel---------------------*/
@@ -321,8 +551,9 @@ html {
         margin-right: auto !important;
     }
 
-    body {
-        overflow-x: hidden !important;
+    .settings_account {
+        top: 3.5rem !important;
+        right: 0.7rem !important;
     }
 
 }
@@ -540,6 +771,46 @@ html {
 .butonUP {
     font-size: 2em;
     justify-content: center;
+}
+
+/* pop up account */
+.settings_account {
+    position: fixed;
+    right: 20px;
+    top: 4.5rem;
+    z-index: 9999;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    height: auto;
+    width: auto;
+    transition: 1s;
+}
+
+.settings_account ul {
+    list-style-type: none;
+    padding: 0 0 0 0;
+}
+
+.settings_account ul li {
+    padding-top: 1rem;
+}
+
+.settings_account i {
+    font-size: 4.5rem;
+}
+
+.settings_account h2 {
+    font-family: 'spectral', serif;
+    font-weight: 700;
+}
+
+.settings_account p {
+    font-style: italic;
+    line-height: 0;
+}
+
+.settings_account button {
+    width: 100%;
 }
 
 /* -------------------------owl-carousel----------------------------- */
@@ -923,6 +1194,54 @@ html {
     color: #005c5a;
     transition: 1s;
 }
+
+/* ----------------------------------------------
+ * Generated by Animista on 2021-9-12 12:43:27
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation slide-in-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-top {
+    0% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-in-top {
+    0% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+
+/* animation */
+.slide-in-top {
+    -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
 
 /* ----------------------------------------------
  * Generated by Animista on 2021-9-5 13:35:3
