--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -9,11 +9,6 @@
   transition: 1s;
 }
 
-[data-theme="dark"] .bg-white {
-  background-color: #222831 !important;
-  transition: 1s;
-}
-
 [data-theme="dark"] .bg-black {
   background-color: #eee !important;
   transition: 1s;
@@ -24,12 +19,12 @@
   transition: 1s;
 }
 
-[data-theme="dark"] #header {
-  background-color: #393e46;
+[data-theme="dark"] .darktogel {
   transition: 1s;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
-[data-theme="dark"] .darktogel {
+[data-theme="dark"] .header .col:nth-child(2) {
   transition: 1s;
   background-color: rgba(255, 255, 255, 0.4);
 }
@@ -62,4 +57,17 @@
 [data-theme="dark"] .form-control:-moz-placeholder {
   transition: 1s;
   color: rgba(255, 255, 255, 0.5) !important;
+}
+
+[data-theme="dark"] .swal2-popup {
+  background: #393e46 !important;
+  color: white !important;
+}
+
+[data-theme="dark"] .swal2-title {
+  color: white !important;
+}
+
+[data-theme="dark"] .swal2-html-container {
+  color: white !important;
 }
